--- a/scenarios/data.meteo.unican.es/files/httpd.conf
+++ b/scenarios/data.meteo.unican.es/files/httpd.conf
@@ -1,52 +1,44 @@
-ServerTokens OS
+ServerTokens Prod
 ServerRoot "/etc/httpd"
 PidFile run/httpd.pid
-Timeout 600
+Timeout 1200
 KeepAlive Off
 MaxKeepAliveRequests 100
 KeepAliveTimeout 15
-#<IfModule prefork.c>
-#StartServers       8
-#MinSpareServers    5
-#MaxSpareServers   20
-#ServerLimit      256
-#MaxClients       256
-#MaxRequestsPerChild  4000
-#</IfModule>
-#<IfModule worker.c>
-#StartServers         4
-#MaxClients         300
-#MinSpareThreads     25
-#MaxSpareThreads     75 
-#ThreadsPerChild     25
-#MaxRequestsPerChild  0
-#</IfModule>
+<IfModule prefork.c>
+StartServers       8
+MinSpareServers    5
+MaxSpareServers   20
+ServerLimit      256
+MaxClients       256
+MaxRequestsPerChild  4000
+</IfModule>
+<IfModule worker.c>
+StartServers         4
+MaxClients         300
+MinSpareThreads     25
+MaxSpareThreads     75
+ThreadsPerChild     25
+MaxRequestsPerChild  0
+</IfModule>
 Listen 80
-LoadModule mpm_event_module modules/mod_mpm_event.so
-LoadModule log_config_module modules/mod_log_config.so
-LoadModule mime_module modules/mod_mime.so
-LoadModule dir_module modules/mod_dir.so
-LoadModule authz_core_module modules/mod_authz_core.so
-LoadModule unixd_module modules/mod_unixd.so
-LoadModule access_compat_module modules/mod_access_compat.so 
-LoadModule authn_core_module modules/mod_authn_core.so
-LoadModule authn_file_module modules/mod_authn_file.so
-LoadModule authz_user_module modules/mod_authz_user.so
 LoadModule auth_basic_module modules/mod_auth_basic.so
-LoadModule slotmem_shm_module modules/mod_slotmem_shm.so
-LoadModule lbmethod_byrequests_module modules/mod_lbmethod_byrequests.so
-#LoadModule authn_alias_module modules/mod_authn_alias.so
+LoadModule auth_digest_module modules/mod_auth_digest.so
+LoadModule authn_file_module modules/mod_authn_file.so
+LoadModule authn_alias_module modules/mod_authn_alias.so
 LoadModule authn_anon_module modules/mod_authn_anon.so
 LoadModule authn_dbm_module modules/mod_authn_dbm.so
-#LoadModule authn_default_module modules/mod_authn_default.so
+LoadModule authn_default_module modules/mod_authn_default.so
 LoadModule authz_host_module modules/mod_authz_host.so
+LoadModule authz_user_module modules/mod_authz_user.so
 LoadModule authz_owner_module modules/mod_authz_owner.so
 LoadModule authz_groupfile_module modules/mod_authz_groupfile.so
 LoadModule authz_dbm_module modules/mod_authz_dbm.so
-#LoadModule authz_default_module modules/mod_authz_default.so
+LoadModule authz_default_module modules/mod_authz_default.so
 LoadModule ldap_module modules/mod_ldap.so
 LoadModule authnz_ldap_module modules/mod_authnz_ldap.so
 LoadModule include_module modules/mod_include.so
+LoadModule log_config_module modules/mod_log_config.so
 LoadModule logio_module modules/mod_logio.so
 LoadModule env_module modules/mod_env.so
 LoadModule ext_filter_module modules/mod_ext_filter.so
@@ -56,6 +48,7 @@ LoadModule deflate_module modules/mod_deflate.so
 LoadModule headers_module modules/mod_headers.so
 LoadModule usertrack_module modules/mod_usertrack.so
 LoadModule setenvif_module modules/mod_setenvif.so
+LoadModule mime_module modules/mod_mime.so
 LoadModule dav_module modules/mod_dav.so
 LoadModule status_module modules/mod_status.so
 LoadModule autoindex_module modules/mod_autoindex.so
@@ -63,6 +56,7 @@ LoadModule info_module modules/mod_info.so
 LoadModule dav_fs_module modules/mod_dav_fs.so
 LoadModule vhost_alias_module modules/mod_vhost_alias.so
 LoadModule negotiation_module modules/mod_negotiation.so
+LoadModule dir_module modules/mod_dir.so
 LoadModule actions_module modules/mod_actions.so
 LoadModule speling_module modules/mod_speling.so
 LoadModule userdir_module modules/mod_userdir.so
@@ -77,40 +71,20 @@ LoadModule proxy_ajp_module modules/mod_proxy_ajp.so
 LoadModule proxy_connect_module modules/mod_proxy_connect.so
 LoadModule cache_module modules/mod_cache.so
 LoadModule suexec_module modules/mod_suexec.so
-#LoadModule disk_cache_module modules/mod_disk_cache.so
-#LoadModule cgi_module modules/mod_cgi.so
+LoadModule disk_cache_module modules/mod_disk_cache.so
+LoadModule cgi_module modules/mod_cgi.so
 LoadModule version_module modules/mod_version.so
 LoadModule ssl_module modules/mod_ssl.so
+
 User apache
 Group apache
 ServerAdmin root@localhost
+
+# Include modsecurity rules
+# Modify the below file to change rules from default
+#Include conf.d/mod_security.conf
+
 UseCanonicalName Off
-DocumentRoot "/var/www/html"
-<Directory />
-    Options FollowSymLinks
-    AllowOverride None
-</Directory>
-<Directory "/var/www/html">
-    Options Indexes FollowSymLinks
-    AllowOverride None
-    Order allow,deny
-    Allow from all
-</Directory>
-<IfModule mod_userdir.c>
-    UserDir disabled
-</IfModule>
-DirectoryIndex index.html index.html.var
-AccessFileName .htaccess
-<Files ~ "^\.ht">
-    Order allow,deny
-    Deny from all
-    Satisfy All
-</Files>
-TypesConfig /etc/mime.types
-#DefaultType text/plain
-<IfModule mod_mime_magic.c>
-    MIMEMagicFile conf/magic
-</IfModule>
 HostnameLookups Off
 ErrorLog logs/error_log
 LogLevel warn
@@ -119,54 +93,7 @@ LogFormat "%h %l %u %t \"%r\" %>s %b" common
 LogFormat "%{Referer}i -> %U" referer
 LogFormat "%{User-agent}i" agent
 CustomLog logs/access_log combined
-ServerSignature On
-Alias /icons/ "/var/www/icons/"
-<Directory "/var/www/icons">
-    Options Indexes MultiViews FollowSymLinks
-    AllowOverride None
-    Order allow,deny
-    Allow from all
-</Directory>
-<IfModule mod_dav_fs.c>
-    DAVLockDB /var/lib/dav/lockdb
-</IfModule>
-ScriptAlias /cgi-bin/ "/var/www/cgi-bin/"
-<Directory "/var/www/cgi-bin">
-    AllowOverride None
-    Options None
-    Order allow,deny
-    Allow from all
-</Directory>
-IndexOptions FancyIndexing VersionSort NameWidth=* HTMLTable Charset=UTF-8
-AddIconByEncoding (CMP,/icons/compressed.gif) x-compress x-gzip
-AddIconByType (TXT,/icons/text.gif) text/*
-AddIconByType (IMG,/icons/image2.gif) image/*
-AddIconByType (SND,/icons/sound2.gif) audio/*
-AddIconByType (VID,/icons/movie.gif) video/*
-AddIcon /icons/binary.gif .bin .exe
-AddIcon /icons/binhex.gif .hqx
-AddIcon /icons/tar.gif .tar
-AddIcon /icons/world2.gif .wrl .wrl.gz .vrml .vrm .iv
-AddIcon /icons/compressed.gif .Z .z .tgz .gz .zip
-AddIcon /icons/a.gif .ps .ai .eps
-AddIcon /icons/layout.gif .html .shtml .htm .pdf
-AddIcon /icons/text.gif .txt
-AddIcon /icons/c.gif .c
-AddIcon /icons/p.gif .pl .py
-AddIcon /icons/f.gif .for
-AddIcon /icons/dvi.gif .dvi
-AddIcon /icons/uuencoded.gif .uu
-AddIcon /icons/script.gif .conf .sh .shar .csh .ksh .tcl
-AddIcon /icons/tex.gif .tex
-AddIcon /icons/bomb.gif /core
-AddIcon /icons/back.gif ..
-AddIcon /icons/hand.right.gif README
-AddIcon /icons/folder.gif ^^DIRECTORY^^
-AddIcon /icons/blank.gif ^^BLANKICON^^
-DefaultIcon /icons/unknown.gif
-ReadmeName README.html
-HeaderName HEADER.html
-IndexIgnore .??* *~ *# HEADER* README* RCS CVS *,v *,t
+ServerSignature Off
 AddLanguage ca .ca
 AddLanguage cs .cz .cs
 AddLanguage da .dk
@@ -193,6 +120,7 @@ AddLanguage ru .ru
 AddLanguage sv .sv
 AddLanguage zh-CN .zh-cn
 AddLanguage zh-TW .zh-tw
+TypesConfig /etc/mime.types
 LanguagePriority en ca cs da de el eo es et fr he hr it ja ko ltz nl nn no pl pt pt-BR ru sv zh-CN zh-TW
 ForceLanguagePriority Prefer Fallback
 AddDefaultCharset UTF-8
@@ -202,22 +130,6 @@ AddType application/x-x509-ca-cert .crt
 AddType application/x-pkcs7-crl    .crl
 AddHandler type-map var
 AddType text/html .shtml
-AddOutputFilter INCLUDES .shtml
-Alias /error/ "/var/www/error/"
-<IfModule mod_negotiation.c>
-<IfModule mod_include.c>
-    <Directory "/var/www/error">
-        AllowOverride None
-        Options IncludesNoExec
-        AddOutputFilter Includes html
-        AddHandler type-map var
-        Order allow,deny
-        Allow from all
-        LanguagePriority en es de fr
-        ForceLanguagePriority Prefer Fallback
-    </Directory>
-</IfModule>
-</IfModule>
 BrowserMatch "Mozilla/2" nokeepalive
 BrowserMatch "MSIE 4\.0b2;" nokeepalive downgrade-1.0 force-response-1.0
 BrowserMatch "RealPlayer 4\.0" force-response-1.0
@@ -230,5 +142,89 @@ BrowserMatch "^WebDAVFS/1.[0123]" redirect-carefully
 BrowserMatch "^gnome-vfs/1.0" redirect-carefully
 BrowserMatch "^XML Spy" redirect-carefully
 BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
+ProxyRequests Off
+ProxyVia Off
+TraceEnable Off
+
+#  ESGF-HTTPD-CONF VERSION: 1.0.11
+
+NameVirtualHost *:80
+<Location "/server-status">
+    SetHandler server-status
+    Order deny,allow
+    Deny from all
+</Location>
+<Location / >
+	<LimitExcept POST GET>
+		Order deny,allow
+		Deny from all
+	</LimitExcept>
+</Location>
+<Location /admin>
+	Order deny,allow
+	Deny from All
+	#insert-permitted-ips-here
+</Location>
+<Location /solr/admin>
+	Order deny,allow
+	Deny from All
+	#insert-permitted-ips-here
+</Location>
+<Location /solr/*/update>
+        Order deny,allow
+        Deny from All
+</Location>
+<VirtualHost *:80>
+
+	Alias /.well-known/acme-challenge/ /var/www/html/.well-known/acme-challenge/
+	<Directory "/var/www/html/.well-known/acme-challenge/">
+		Options None
+		AllowOverride None
+		ForceType text/plain
+		RedirectMatch 404 "^(?!/\.well-known/acme-challenge/[\w-]{43}$)"
+	</Directory>
+
+    # redirect all requests from HTTP to HTTPS
+    # EXCEPT for the applications listed below
+    RewriteEngine On
+    RewriteCond %{REQUEST_URI} !^/\.well\-known/acme\-challenge/
+    RewriteCond %{HTTPS} off
+    RewriteCond %{REQUEST_URI} !^/esg-search(.*)$
+    RewriteCond %{REQUEST_URI} !^/las(.*)$
+    RewriteCond %{REQUEST_URI} !^/solr(.*)$
+    RewriteCond %{REQUEST_URI} !^/thredds(.*)$
+    RewriteCond %{REQUEST_URI} !^/tds5(.*)$
+    RewriteCond %{REQUEST_URI} !^/server-status(.*)$
+    RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
+
+	#add local configuration, if any,  to /etc/httpd/conf/esgf-httpd-local.conf (without virtualhost directive) and uncomment following line. For https, the file is esgf-httpd-locals.conf (locals for https, local for http)
+	#Include /etc/httpd/conf/esgf-httpd-local.conf
+
+ 	SSLProxyEngine On
+	ProxyPassMatch  ^/solr(.*)$     http://localhost:8983/solr$1
+	ProxyPassReverse        /solr   http://localhost:8983/solr
+
+	ProxyPass /esgf-idp	http://localhost:8080/esgf-idp
+	ProxyPassReverse /esgf-idp	http://localhost:8080/esgf-idp
+
+	ProxyPass /esg-orp	ajp://localhost:8223/esg-orp
+	ProxyPassReverse /esg-orp	ajp://localhost:8223/esg-orp
+
+	ProxyPass /esg-search	ajp://localhost:8223/esg-search
+	ProxyPassReverse /esg-search	ajp://localhost:8223/esg-search
+
+	ProxyPass /thredds	ajp://localhost:8223/thredds
+	ProxyPassReverse /thredds	ajp://localhost:8223/thredds
+
+	ProxyPass /esgf-stats-api	ajp://localhost:8223/esgf-stats-api
+	ProxyPassReverse /esgf-stats-api	ajp://localhost:8223/esgf-stats-api
+
+	ProxyPass /las	ajp://localhost:8223/las
+	ProxyPassReverse /las	ajp://localhost:8223/las
+
+	Include /etc/httpd/conf.d/esgf-proxy/*.conf
+
+</VirtualHost>
+
+Include conf/*.ssl.conf
 Include /etc/httpd/conf.d/modproxy.conf
-Include /etc/httpd/conf/httpd.ssl.conf
