chttproxy.yml running but user notebooks do not start

--- a/scenarios/data.meteo.unican.es/stop.yml
+++ b/scenarios/data.meteo.unican.es/stop.yml
@@ -34,4 +34,4 @@
 - name: Stop hubs
   hosts: hubs
   tasks:
-    - shell: kill $(cat {{ hub_pid }})
+    - shell: '[ ! -f {{ hub_pid }} ] || kill $(cat {{ hub_pid }})'
