--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "publisher"]
 	path = publisher
 	url = https://github.com/SantanderMetGroup/publisher
-	branch = tds-cluster
+	branch = master
