--- a/scenarios/data.meteo.unican.es/catalogs.yml
+++ b/scenarios/data.meteo.unican.es/catalogs.yml
@@ -14,6 +14,7 @@
         username: "{{ svn.username }}"
         password: "{{ svn.password }}"
         force: yes
+        in_place: yes
       with_items: "{{ tomcats }}"
 
     - name: Checkout TDS datasets
@@ -23,6 +24,7 @@
         username: "{{ svn.username }}"
         password: "{{ svn.password }}"
         force: yes
+        in_place: yes
       with_items: "{{ tomcats }}"
 
     - name: Copy root catalog
