--- a/scenarios/data.meteo.unican.es/install.yml
+++ b/scenarios/data.meteo.unican.es/install.yml
@@ -70,6 +70,18 @@
       file: state=directory path={{ tomcat_bases }}/{{ item.name }}/content/thredds
       with_items: "{{ tomcats }}"
 
+    - name: Create common catalog and ncml directories
+      file: state=directory path={{ root }}/{{ item }} mode=0775
+      with_items: [catalogs, public]
+
+    - name: Symlink catalogs
+      file: state=link src={{ root }}/catalogs path={{ tomcat_bases }}/{{ item.name }}/content/thredds/catalogs
+      with_items: "{{ tomcats }}"
+
+    - name: Symlink ncmls
+      file: state=link src={{ root }}/public path={{ tomcat_bases }}/{{ item.name }}/content/thredds/public
+      with_items: "{{ tomcats }}"
+
     - name: Copy threddsConfig.xml
       copy: src=files/threddsConfig.xml dest={{ tomcat_bases }}/{{ item.name }}/content/thredds/threddsConfig.xml
       with_items: "{{ tomcats }}"
