--- a/scenarios/data.meteo.unican.es/stop.yml
+++ b/scenarios/data.meteo.unican.es/stop.yml
@@ -7,18 +7,8 @@
 - name: Stop tomcats
   hosts: servers
   tasks:
-    - name: Stop tomcats
-      command: "{{ tomcat_home }}/bin/shutdown.sh"
-      args:
-        removes: "{{ tomcat_bases }}/{{ item.name }}/logs/catalina.pid"
-      environment:
-        CATALINA_BASE: "{{ tomcat_bases }}/{{ item.name }}"
-      with_items: "{{ tomcats }}"
-      ignore_errors: True # If catalina.pid is present but process is not running, we don't want an error
-
-    - name: Remove catalina.pid
-      file: path={{ tomcat_bases }}/{{ item.name }}/logs/catalina.pid state=absent
-      with_items: "{{ tomcats }}"
+    - name: Import stop tasks
+      import_tasks: stop/tomcats.yml
 
 - name: Stop database
   hosts: databases
