--- a/scenarios/data.meteo.unican.es/install.yml
+++ b/scenarios/data.meteo.unican.es/install.yml
@@ -64,7 +64,52 @@
         name: tds
       vars:
         tds_home: "{{ tomcat_bases }}/{{ item.name }}/webapps/{{ tds_context }}"
-        tds_sslPort: "{{ item.ssl }}"
+        tds_sslPort: 443
+        tds_useSSL: True
+      with_items: "{{ tomcats }}"
+
+    - name: Create content/thredds
+      file: state=directory path={{ tomcat_bases }}/{{ item.name }}/content/thredds
+      with_items: "{{ tomcats }}"
+
+    - name: Create common catalog and ncml directories
+      file: state=directory path={{ root }}/{{ item }} mode=0775
+      with_items: [catalogs, public]
+
+    - name: Copy threddsConfig.xml
+      copy: src=files/threddsConfig.xml dest={{ tomcat_bases }}/{{ item.name }}/content/thredds/threddsConfig.xml
+      with_items: "{{ tomcats }}"
+
+    - name: Clone tds-content repository
+      run_once: True
+      local_action:
+        module: git
+        repo: git@gitlab.com:scds/tds-content.git
+        dest: tds-content
+
+    - name: Synchronize tds-content
+      run_once: True
+      synchronize: src=tds-content dest={{ root }}
+
+    - name: Find directory catalogs
+      find: paths={{ root }}/tds-content file_type=directory recurse=no
+      register: catalog_result
+
+    - name: Symlink tds-content
+      file:
+        state: link
+        src: "{{ item.1.path }}"
+        path: "{{ tomcat_bases }}/{{ item.0.name }}/content/thredds/{{ item.1.path|basename }}"
+      with_nested:
+        - "{{ tomcats }}"
+        - "{{ catalog_result.files }}"
+
+    - name: Symlink catalogs
+      file: state=link src={{ root }}/tds-content/catalogs path={{ tomcat_bases }}/{{ item.name }}/content/thredds/catalogs
+      with_items: "{{ tomcats }}"
+
+    - name: Symlink ncmls
+      file: state=link src={{ root }}/tds-content/public path={{ tomcat_bases }}/{{ item.name }}/content/thredds/public
       with_items: "{{ tomcats }}"
 
 # Melody
