--- a/scenarios/data.meteo.unican.es/install.yml
+++ b/scenarios/data.meteo.unican.es/install.yml
@@ -88,7 +88,20 @@
 
     - name: Synchronize tds-content
       run_once: True
-      local_action: command rsync -avz tds-content {{ ansible_hostname }}:{{ root }}
+      synchronize: src=tds-content dest={{ root }}
+
+    - name: Find directory catalogs
+      find: paths={{ root }}/tds-content file_type=directory recurse=no
+      register: catalog_result
+
+    - name: Symlink tds-content
+      file:
+        state: link
+        src: "{{ item.1.path }}"
+        path: "{{ tomcat_bases }}/{{ item.0.name }}/content/thredds/{{ item.1.path|basename }}"
+      with_nested:
+        - "{{ tomcats }}"
+        - "{{ catalog_result.files }}"
 
     - name: Symlink catalogs
       file: state=link src={{ root }}/tds-content/catalogs path={{ tomcat_bases }}/{{ item.name }}/content/thredds/catalogs
