--- a/scenarios/data.meteo.unican.es/files/httpd.conf
+++ b/scenarios/data.meteo.unican.es/files/httpd.conf
@@ -111,10 +111,10 @@ TypesConfig /etc/mime.types
 <IfModule mod_mime_magic.c>
     MIMEMagicFile conf/magic
 </IfModule>
-<Limit OPTIONS>
-Order deny,allow
-Deny from all
-</Limit>
+#<Limit OPTIONS>
+#Order deny,allow
+#Deny from all
+#</Limit>
 HostnameLookups Off
 ErrorLog logs/error_log
 LogLevel warn
