--- a/scenarios/data.meteo.unican.es/install.yml
+++ b/scenarios/data.meteo.unican.es/install.yml
@@ -1,33 +1,13 @@
 - name: Install tomcats
   hosts: servers
   vars:
-    jdk_tgz: ../../software/jdk8.tar.gz
-    tomcat_tgz: ../../software/apache-tomcat-8.0.42.tar.gz
-    tds_war: ../../software/tds-5.0.0-beta6.war
-    derby_tgz: ../../software/db-derby-10.14.2.0-lib.tar.gz
-    jrobin_jar: ../../software/jrobin-1.5.9.jar
-    melody_jar: ../../software/javamelody-core-1.73.1.jar
     tomcat_ssl_keystoreFile: "{{ tomcat_home }}/server.p12"
     tomcat_ssl_keystorePass: coches1
   vars_files:
     - secrets.yml
+  roles:
+    - role: tomcat
   tasks:
-    - name: Create {{ tomcat_home }} directory
-      file: state=directory path={{ tomcat_home }}
-
-    - name: Create directory for jdk
-      file: state=directory path={{ jdk_home }}
-
-    - name: Unarchive jdk in {{ tomcat_home }}
-      unarchive: >
-        src={{ jdk_tgz }} dest={{ jdk_home }}
-        extra_opts="--strip-components=1"
-
-    - name: Unarchive tomcat in {{ tomcat_home }}
-      unarchive: >
-        src={{ tomcat_tgz }} dest={{ tomcat_home }}
-        extra_opts="--strip-components=1"
-
     - name: Copy keystore
       copy: src=../../server.p12 dest={{ tomcat_ssl_keystoreFile }}
 
@@ -44,7 +24,7 @@
 # Tomcats
     - name: Deploy catalina bases
       include_role:
-        name: tomcat
+        name: tomcat_base
       with_items: "{{ tomcats }}"
       loop_control:
         loop_var: tomcat
