--- a/scenarios/data.meteo.unican.es/provision/servers.yml
+++ b/scenarios/data.meteo.unican.es/provision/servers.yml
@@ -15,7 +15,7 @@
 
     - name: Required packages
       package: name={{ item }} state=present
-      with_items: [openssh-server, sudo, python-passlib, subversion, git, unzip]
+      with_items: [openssh-server, sudo, python-passlib, subversion, git, unzip, netcdf]
 
     - name: Debug packages
       package: name={{ item }} state=present
@@ -33,3 +33,6 @@
 
     - name: Start sshd
       service: name=sshd state=started
+
+    - name: Create /oceano directory
+      file: state=directory path=/oceano user={{ ansible_user }} group={{ ansible_user }} mode=775
