--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = publisher
 	url = https://github.com/SantanderMetGroup/publisher
 	branch = master
+[submodule "scenarios/data.meteo.unican.es/esgf-ansible"]
+	path = scenarios/data.meteo.unican.es/esgf-ansible
+	url = git@github.com:SantanderMetGroup/esgf-ansible
+	branch = data
